0.22
  - normalized_rule attribute(EXPERIMENTAL) is changed to rule_obj(EXPERIMENTAL)
    rule become saved as object.
0.21
  - add EXPERIMENTAL filter representation in filter function
    {result => 1, output => $value} mean [1, $value];
0.20
  - add EXPERIMENTAL feature that you can return custom error message
    in user constraint function.
0.19
  - suppress filter function undef warning.
0.18
  - remove EXPERIMENTAL parse_rule method.
  - add EXPERIMENTAL normalized_rule attribute.
  - improved syntax error message.
0.17
  - improved description.
0.16
  - added EXPERIMANTAL parse_rule method
    to know how Validator::Custom parse rule
0.15
  - added length constraint syntax {length => {min => ..., max => ...}}
  - added trim_uni, trim_uni_collapse, trim_uni_lead, trim_uni_trail
    to trim unicode space charctor
0.1428
  - fixed bug that number related constraint match unicode number by \d.
    From now, only 0-9 is matched.
    the following constraint functions is effected.
      between, date_to_timepiece, datetime_to_timepiece, equal_tom,
      greater_than, less_than, int, uint
  - fixed bug that between constraint can't receive decimal number.
  - fixed bug that equal_to constraint can't receive decimal number.
  - fixed bug that greater_than constraint can't receive decimal number.
  - fixed bug that less_than constraint can't receive decimal number.
  - fixed but that not_space, space match unicode space character.
  - fixed bug that trim, trim_collapse, trim_lead, trim_trail remove unicode space character.
0.1427
  - fixed bug that missing parameter had not send to constraint function.
0.1426
  - improved undefined value validation
  - removed EXPERIMETAL status from Validator::Custom::Result::loose_data method
0.1425
  - added EXPERIMENTAL Validator::Custom::Result loose_data method
  - can set code reference to rule default option to get data at read time.
  - changed backword compatible policy